# BookMortal

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 244d0fc9deb7_add_currency_field_to_payment.py  5a15735130bb_add_unique_constraint_to_user_and_book_.py  61c76e1d6937_create_all_models.py  73c4b04a9b80_remove_total_amount_field_for_order_.py  91f295d53227_add_constraint_for_is_main_field_to_.py  b7d6261518f3_remove_payment_method_field_of_payment.py  ba3da027048e_add_constraint_for_is_primary_field_to_.py  daf2ff5650e0_update_book_category_association_field.py  eecf3f806860_add_status_field_to_payments.py  f6fc1e666d3c_add_index_to_transaction_id_field_of_.py
core/: config.py
core/api/: __init__.py  api.py  routers.py  schemas.py  services.py
core/api/addresses/: schemas.py  services.py  views.py
core/api/authentication/: backend.py  dependencies.py  routers.py  schemas.py  strategy.py  transport.py  user_manager.py
core/api/book_images/: schemas.py  services.py  views.py
core/api/books/: schemas.py  services.py  views.py
core/api/categories/: schemas.py  services.py  views.py
core/api/order_items/: schemas.py  services.py  views.py
core/api/orders/: schemas.py  services.py  views.py
core/api/payments/: schemas.py  services.py  views.py
core/api/reviews/: schemas.py  services.py  views.py
core/api/users/: dependencies.py  schemas.py
core/api/users/sellers/: schemas.py  services.py  views.py
core/celery/: __init__.py  send_email.py
core/celery/email_templates/: password_reset.html  verify_account.html
core/database/: __init__.py
core/database/models/: __init__.py  address.py  base.py  book.py  book_category.py  book_image.py  category.py  order.py  order_item.py  payment.py  review.py  token.py  user.py
core/middleware/: error.py  log.py  metrics.py
core/prometheus/: __init__.py
core/redis/: __init__.py
tests/: conftest.py
tests/base/: crud.py
tests/factories/: user.py
tests/tests/: test_addresses.py  test_books.py  test_reviews.py
