[project]
name = "ibook-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.1",
    "fastapi>=0.115.12",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "flower>=2.0.1",
    "jinja2>=3.1.6",
    "orjson>=3.10.16",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "ruff>=0.11.4",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "I",
    "ANN",
]
ignore = ["ANN204", "ANN002", "ANN003"]
dummy-variable-rgx = "__.*"

[tool.ruff.format]
quote-style = "double"
